--- a/c#/TripServiceKata/TripServiceKata.Tests/packages.config
+++ b/c#/TripServiceKata/TripServiceKata.Tests/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NSubstitute" version="1.4.3.0" targetFramework="net40" />
-  <package id="NUnit" version="2.6.1" targetFramework="net40" />
+  <package id="Castle.Core" version="4.0.0" targetFramework="net462" />
+  <package id="Moq" version="4.7.8" targetFramework="net462" />
+  <package id="xunit" version="2.2.0" targetFramework="net462" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net462" />
+  <package id="xunit.assert" version="2.2.0" targetFramework="net462" />
+  <package id="xunit.core" version="2.2.0" targetFramework="net462" />
+  <package id="xunit.extensibility.core" version="2.2.0" targetFramework="net462" />
+  <package id="xunit.extensibility.execution" version="2.2.0" targetFramework="net462" />
 </packages>
